# sustainability-report-parser

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: 00_quickstart.ipynb  01_demo_parse.py  02_section_analysis.py
sustain_parser/: __init__.py  analysis.py  api.py  assets.py  cli.py  export.py  models.py  pdf_extract.py  section_tree.py  segment.py  toc_detect.py
