[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sustain-parser"
version = "0.2.1"
description = "Parse sustainability report PDFs into a hierarchical section tree, extract text/tables/figures, and output pandas-ready data for teaching and analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Rui Shi" }
]
keywords = ["sustainability", "ESG", "sustainability reporting", "PDF", "teaching", "accounting"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Text Processing",
]

dependencies = [
  "pymupdf>=1.23",
  "pdfplumber>=0.11",
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
]

[project.urls]
Homepage = "https://github.com/finresearchshi-boop/sustainability-report-parser"
Repository = "https://github.com/finresearchshi-boop/sustainability-report-parser"
Issues = "https://github.com/finresearchshi-boop/sustainability-report-parser/issues"

[project.scripts]
sustain-parser = "sustain_parser.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sustain_parser*"]
